crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__root_state.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Validation(RootVerification { detail: \"invalid state root. expected: 0x5555555555555555555555555555555555555555555555555555555555555555, got: 0x6666666666666666666666666666666666666666666666666666666666666666\" })"
---
{
  "code": -10003,
  "data": {
    "validation": {
      "root-verification": {
        "detail": "invalid state root. expected: 0x5555555555555555555555555555555555555555555555555555555555555555, got: 0x6666666666666666666666666666666666666666666666666666666666666666"
      }
    }
  },
  "message": "Validation failed: State root verification failed"
}
