crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__settle_contract.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Settlement(Contract { detail: \"Contract transport error\" })"
---
{
  "code": -10004,
  "data": {
    "settlement": {
      "contract": {
        "detail": "Contract transport error"
      }
    }
  },
  "message": "L1 settlement error: Contract error"
}
