crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__settle_io.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "Settlement(IoError(\"Settlement transport error\"))"
---
{
  "code": -10004,
  "data": {
    "settlement": {
      "io-error": "Settlement transport error"
    }
  },
  "message": "L1 settlement error: IO error"
}
