crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__settle_receipt.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: Settlement(NoReceipt)
---
{
  "code": -10004,
  "data": {
    "settlement": "no-receipt"
  },
  "message": "L1 settlement error: No receipt"
}
