crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__settlement_admin_job_not_found.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "ResourceNotFound(\"SettlementJob(00000000000000000000000007)\")"
snapshot_kind: text
---
{
  "code": -10008,
  "data": {
    "resource-not-found": "SettlementJob(00000000000000000000000007)"
  },
  "message": "Resource not found: SettlementJob(00000000000000000000000007)"
}
