crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__settlement_admin_no_live_task.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SettlementAdmin(NoLiveTask { job_id: \"00000000000000000000000008\" })"
snapshot_kind: text
---
{
  "code": -10010,
  "data": {
    "settlement-admin": {
      "no-live-task": {
        "job-id": "00000000000000000000000008"
      }
    }
  },
  "message": "Settlement admin error: No live settlement task for job 00000000000000000000000008"
}
