crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__sig_contract.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
assertion_line: 161
expression: "SignatureMismatch { detail: \"contract error: contract not deployed: deployment transaction failed\" }"
snapshot_kind: text
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "contract error: contract not deployed: deployment transaction failed"
    }
  },
  "message": "Rollup signature verification failed"
}
