crates/agglayer-jsonrpc-api/src/tests/snapshots/agglayer_jsonrpc_api__tests__errors__sig_invalid_len.snap
---
source: crates/agglayer-jsonrpc-api/src/tests/errors.rs
expression: "SignatureMismatch { detail: \"could not recover transaction signer: Invalid string length\" }"
---
{
  "code": -10002,
  "data": {
    "signature-mismatch": {
      "detail": "could not recover transaction signer: Invalid string length"
    }
  },
  "message": "Rollup signature verification failed"
}
